# UCB_Project

./: .env.example  .gitignore  .gitmodules  DEPLOYMENT.md  HANDOFF.md  HANDOVER.md  README.md  REPORT.md  RESULTS_README.md  config.py  download_data.py  launch_parallel.py  pyproject.toml  requirements.txt  run.py  setup_weights.py  smoke_test.py
after_touch_src_200/: REPORT_v2_200epoch.md
analysis/: generate_charts.py  vis_contacts.py  vis_grasp_pose.py  vis_m5_result.py
assets/: convert_all_v2_usd.py  convert_obj_to_usd.py
before_touch_src_200/: EXPERIMENT_REPORT.md  batch_inference.py
data/: aggregate_prior.py  aggregate_robot_gt.py  analyze_depth_pro_bias.py  analyze_dexycb_cameras.py  apply_hawor_patches.sh  batch_align_ego_mano_fp.py  batch_align_mano_fp.py  batch_depth_pro.py  batch_haptic.py  batch_haptic_arctic.py  batch_haptic_oakink.py  batch_hawor.py  batch_hawor_arctic.py  batch_megasam.py  batch_prepare_frame3.py  build_dataset.py  calibrate_dataset_fx.py  dexycb_camera_config.json  estimate_obj_scale.py  estimate_obj_scale_ego.py  eval_depth_pro_datasets.py  eval_egoexo_intrinsics.py  eval_haptic_asymmetric.py  eval_unidepth_datasets.py  export_oakink_prior.py  extract_affordancenet.py  extract_contacts.py  extract_contacts_v2.py  extract_hograspnet.py  extract_oakink2.py  manifest.json  megasam_utils.py  mesh_provider.py  prepare_bundlesdf_input.py  prepare_ego_masks.py  prepare_obj_recon_input.py  run_dexycb_cracker_box.py  run_hawor_seq.py  run_megasam_focal.py  screen_camera_motion.py  (+5 more)
docs/: hawor_install_notes.md  oakink_v2_setup.md  (+1 more)
(+87 files in other folders)
